wip: trying to fix tech-stack icons not showing in projectCard

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -29,3 +29,10 @@ html {
   background-repeat: no-repeat;
   background-size: 70px 70px;
 }
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity 0.25s;
+}
+.fade-enter-from, .fade-leave-to {
+  opacity: 0;
+}
